# CPU-simulator

./: CMakeLists.txt  alu.h  bus.h  cdb.h  cpu.h  decode.h  instructionqueue.h  instructions.h  loadstorebuffer.h  main.cpp  memory.h  myqueue.h  predictor.h  register.h  registerfile.h  reorderbuffer.h  reservationstation.h  reservationstation_loadstorebuffer.h
testcases/: array_test1.dump  bulgarian.dump  multiarray.dump
